media/stylesheets/album.css
#album {
    margin-top: 1.1em;
}
#album a img {
    cursor: pointer;
    height: 210px;
    width: auto;
    margin-top: 0px;
    margin: 3px;
}
#album img:hover {
    -moz-box-shadow: 0 0 5px 2px #888;
    -webkit-box-shadow: 0 0 5px 2px #888;
    box-shadow: 0 0 5px 2px #888;
}

#load_msg {
    margin-top: 30px;
    text-align: center;
}
.arrow-down {
        opacity: .6;
        display: inline;
        width: 0;
        height: 0;
        border-left: 20px solid transparent;
        border-right: 20px solid transparent;
        border-top: 20px solid #005454;
}

.expand {
    cursor: pointer;
    z-index: 9;
}
.expand img {
    border-style: solid;
    border-color: #EEEEE6;
    border-width: 7px;
    -moz-box-shadow: 0 0 5px 2px #888;
    -webkit-box-shadow: 0 0 5px 2px #888;
    box-shadow: 0 0 5px 2px #888;
}

.overlay {
    background-color: #000;
    opacity: .7;
    filter: alpha(opacity=70);
    position: absolute; top: 0; left: 0;
    width: 100%;
    height: 100%;
    z-index: 10;
}
.overlay-img {
    position: absolute;
    z-index: 11;
    left: 15%;
    top: 10%;
}
.overlay-img {
    width: 960px;
    height: auto;
}
.overlay-img {
    width: auto;
    height: 80%;
}

